--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+		"dev": "nodemon ./build/index.js",
+		"start": "node ./build/index.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +21,10 @@
   },
   "homepage": "https://github.com/irvingvjuarez/pern-todo#readme",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "express": "4.18.2"
   }
 }
