--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-		"dev": "nodemon ./build/index.js",
+		"dev": "tsc && nodemon ./build/index.js",
 		"start": "node ./build/index.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
