--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-		"dev": "tsc && nodemon ./build/index.js",
-		"start": "node ./build/index.js",
+    "dev": "tsc && nodemon ./build/index.js",
+    "start": "node ./build/index.js",
     "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/irvingvjuarez/pern-todo#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/express": "^4.17.14",
     "typescript": "^4.8.4"
   },
