--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "@types/dotenv": "^8.2.0",
+    "@types/pg": "^8.6.5",
+    "dotenv": "^16.0.3",
+    "express": "4.18.2",
+    "pg": "^8.8.0"
   }
 }
