--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "@reduxjs/toolkit": "^1.8.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
